k8s/base/keycloak/plantsuite-kc/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: plantsuite-kc
spec:
  hosts:
    - account.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: plantsuite-kc-service
